Fixed footer z-index. Fixed la carta link.

--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -12,7 +12,7 @@ a {
 
 .title-footer {
   position: absolute;
-  z-index: 10;
+  z-index: 5;
   top: -58px;
   width: 100%;
 }
